--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -90,18 +90,23 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>C:\cpplibs;C:\aviutl_libs;C:\aviutl_libs\aviutl_exedit_sdk\;C:\boost_1_69_0\include\boost-1_83\;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\cpplibs;C:\aviutl_libs;C:\aviutl_libs\aviutl_exedit_sdk\;C:\cpplibs\boost_1_69_0\include\boost-1_83\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>curve_editor.def</ModuleDefinitionFile>
-      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
       <DelayLoadDLLs>lua51.dll</DelayLoadDLLs>
+      <AdditionalManifestDependencies>type='Win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='x86' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl110\plugins"</Command>
     </PostBuildEvent>
+    <Manifest>
+      <AdditionalManifestFiles>
+      </AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -113,7 +118,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>C:\cpplibs;C:\aviutl_libs;C:\aviutl_libs\aviutl_exedit_sdk\;C:\boost_1_69_0\include\boost-1_83\;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\cpplibs;C:\aviutl_libs;C:\aviutl_libs\aviutl_exedit_sdk\;C:\cpplibs\boost_1_69_0\include\boost-1_83\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -122,8 +127,16 @@
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <ModuleDefinitionFile>curve_editor.def</ModuleDefinitionFile>
       <DelayLoadDLLs>lua51.dll</DelayLoadDLLs>
-      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
+      <AdditionalManifestDependencies>type='Win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='x86' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl110\plugins"</Command>
+    </PostBuildEvent>
+    <Manifest>
+      <AdditionalManifestFiles>
+      </AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -139,7 +152,8 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>curve_editor.def</ModuleDefinitionFile>
-      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
+      <AdditionalManifestDependencies>type='Win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='x86' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -160,10 +174,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>curve_editor.def</ModuleDefinitionFile>
-      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>C:\aviutl_libs\mkaul\mkaul.lib;C:\aviutl_libs\lua5_1_4_Win32_dll8_lib\lua51.lib;comctl32.lib;$(CoreLibraryDependencies)</AdditionalDependencies>
+      <AdditionalManifestDependencies>type='Win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' processorArchitecture='x86' publicKeyToken='6595b64144ccf1df' language='*'</AdditionalManifestDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="actctx_manager.hpp" />
     <ClInclude Include="control_point.hpp" />
     <ClInclude Include="curve_bezier.hpp" />
     <ClInclude Include="curve_bounce.hpp" />
@@ -176,6 +192,7 @@
     <ClInclude Include="curve_normal.hpp" />
     <ClInclude Include="curve_value.hpp" />
     <ClInclude Include="dialog_config_contents.hpp" />
+    <ClInclude Include="dlgproc_about.hpp" />
     <ClInclude Include="dlgproc_bezier_parameter.hpp" />
     <ClInclude Include="dlgproc_config.hpp" />
     <ClInclude Include="dlgproc_config_appearance.hpp" />
@@ -192,7 +209,11 @@
     <ClInclude Include="curve_data.hpp" />
     <ClInclude Include="curve_editor.hpp" />
     <ClInclude Include="exedit_hook.hpp" />
-    <ClInclude Include="func_filter.hpp" />
+    <ClInclude Include="filter_exit.hpp" />
+    <ClInclude Include="filter_init.hpp" />
+    <ClInclude Include="filter_project_load.hpp" />
+    <ClInclude Include="filter_project_save.hpp" />
+    <ClInclude Include="filter_wndproc.hpp" />
     <ClInclude Include="global.hpp" />
     <ClInclude Include="curve_graph.hpp" />
     <ClInclude Include="handle_bezier.hpp" />
@@ -203,6 +224,8 @@
     <ClInclude Include="menu_edit_mode.hpp" />
     <ClInclude Include="menu_graph.hpp" />
     <ClInclude Include="menu_more.hpp" />
+    <ClInclude Include="my_button.hpp" />
+    <ClInclude Include="my_messagebox.hpp" />
     <ClInclude Include="trackbar_button.hpp" />
     <ClInclude Include="preset.hpp" />
     <ClInclude Include="resource.h" />
@@ -222,6 +245,7 @@
     <ClInclude Include="wndproc_texteditor.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="actctx_manager.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="control_point.cpp" />
     <ClCompile Include="curve.cpp">
@@ -239,12 +263,18 @@
     <ClCompile Include="curve_editor_graph.cpp" />
     <ClCompile Include="curve_graph.cpp" />
     <ClCompile Include="dialog_config_contents.cpp" />
+    <ClCompile Include="dlgproc_about.cpp" />
     <ClCompile Include="dlgproc_config_appearance.cpp" />
     <ClCompile Include="dlgproc_config_behavior.cpp" />
     <ClCompile Include="dlgproc_config_editing.cpp" />
     <ClCompile Include="dlgproc_config_general.cpp" />
     <ClCompile Include="dlgproc_curve_code.cpp" />
     <ClCompile Include="drag_and_drop.cpp" />
+    <ClCompile Include="filter_exit.cpp" />
+    <ClCompile Include="filter_init.cpp" />
+    <ClCompile Include="filter_project_load.cpp" />
+    <ClCompile Include="filter_project_save.cpp" />
+    <ClCompile Include="filter_wndproc.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="menu_curve.cpp" />
     <ClCompile Include="menu_edit_mode.cpp" />
@@ -288,9 +318,8 @@
     <ClCompile Include="dlgproc_bezier_parameter.cpp" />
     <ClCompile Include="dlgproc_config.cpp" />
     <ClCompile Include="dlgproc_warning_autosaver.cpp" />
-    <ClCompile Include="filter_export.cpp" />
+    <ClCompile Include="dll_export.cpp" />
     <ClCompile Include="exedit_hook.cpp" />
-    <ClCompile Include="func_filter.cpp" />
     <ClCompile Include="func_lua.cpp" />
     <ClCompile Include="handle_bezier.cpp" />
     <ClCompile Include="handle_bounce.cpp">
@@ -327,6 +356,9 @@
     <Image Include="resources\icon\dark\next.png" />
     <Image Include="resources\icon\dark\read.png" />
     <Image Include="resources\icon\dark\save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="manifest.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
